# safe-num

./: README.md  safe-num.cabal  shell.nix
src/: SafeNum.hs
test/: Spec.hs
