cabal-version:      2.4
name:               safe-num
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Peyton Jones
maintainer:         me@michaelpj.com

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files: CHANGELOG.md

library 
    default-language: Haskell2010
    exposed-modules:
        SafeNum
    build-depends:
        base
    hs-source-dirs:   src

test-suite safe-num-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base
      , QuickCheck
      , quickcheck-instances
      , tasty
      , tasty-quickcheck
      , safe-num
    hs-source-dirs: test
